// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper Basic example 1`] = `
"<styled.div>
  <styled.div>
    <Styled(WithStyles(Button)) onClick={[Function]}>
      <pure(KeyboardArrowLeftIcon) style={[undefined]} />
    </Styled(WithStyles(Button))>
    <styled.div>
      <WithStyles(Typography) align=\\"inherit\\" variant=\\"h4\\" style={[undefined]}>
        First
      </WithStyles(Typography)>
      <WithStyles(Typography) align=\\"inherit\\" variant=\\"caption\\" style={[undefined]}>
        Slide
      </WithStyles(Typography)>
    </styled.div>
    <Styled(WithStyles(Button)) onClick={[Function]}>
      <pure(KeyboardArrowRightIcon) style={[undefined]} />
    </Styled(WithStyles(Button))>
  </styled.div>
  <Styled(WithStyles(MobileStepper)) steps={3} position=\\"static\\" activeStep={0} />
</styled.div>"
`;

exports[`Stepper Starting at Second item 1`] = `
"<styled.div>
  <styled.div>
    <Styled(WithStyles(Button)) onClick={[Function]}>
      <pure(KeyboardArrowLeftIcon) style={[undefined]} />
    </Styled(WithStyles(Button))>
    <styled.div>
      <WithStyles(Typography) align=\\"inherit\\" variant=\\"h4\\" style={[undefined]}>
        Second
      </WithStyles(Typography)>
      <WithStyles(Typography) align=\\"inherit\\" variant=\\"caption\\" style={[undefined]}>
        Slide
      </WithStyles(Typography)>
    </styled.div>
    <Styled(WithStyles(Button)) onClick={[Function]}>
      <pure(KeyboardArrowRightIcon) style={[undefined]} />
    </Styled(WithStyles(Button))>
  </styled.div>
  <Styled(WithStyles(MobileStepper)) steps={3} position=\\"static\\" activeStep={1} />
</styled.div>"
`;
